# alive-serv

./: .copywrite.hcl  CMakeLists.txt  LICENSE  README.MD
.github/workflows/: build_linux.yml  codeql.yml
src/: main.c
src/callback_logic/: debug.c  login.c  login.h  start.c  start.h
src/core/: database.c  database.h  static_file_callback.c
src/encryption/: encryption.c  encryption.h
src/game/: debug.c  debug.h  login.c  start.c
src/response/: response.c  response.h
src/response_structs/: base_response.c  base_response.h
